# stellar-nbody-simulation

./: .gitignore  Cargo.toml  README.md
resources/systems/: mercury-unstable.json  test-system.json  test-system2.json  test-system3.json
src/: main.rs
src/core/: constants.rs  defaults.rs  mod.rs  simulation.rs  types.rs
src/entities/: entities.rs  entity.rs  mod.rs  system.rs
src/integrator/: mod.rs
src/io/: mod.rs
src/math/: vec3.rs
src/nbody/: mod.rs  nbody_system.rs
src/rendering/: colour.rs  mod.rs  screenshot.rs
src/state/: mod.rs
src/text/: mod.rs
src/util/: functional.rs  mod.rs  temporal.rs
